webdav: remove unused defines

This are leftovers from before the gnome-user-share binary was split in
two.

https://bugzilla.gnome.org/show_bug.cgi?id=739872